--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bu bir benzin istasyonu uygulamasıdır. </title>
 </head>
 <body>
-
+<h1>BENZİN UYGULAMASI</h1>
 
 
     <script src="page.js"></script>
